--- a/app/src/main/res/layout/activity_two_wheeler.xml
+++ b/app/src/main/res/layout/activity_two_wheeler.xml
@@ -1,10 +1,324 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".two_wheeler">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/heading"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/two_wheeler_insurance"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/idv"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/idv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:layout_marginBottom="5dp"
+            android:text="@string/last_year_idv"
+            app:layout_constraintBottom_toTopOf="@+id/idv_value"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/heading" />
+
+        <TextView
+            android:id="@+id/dep"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/depreciation"
+            app:layout_constraintBottom_toTopOf="@+id/dep_value"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.68"
+            app:layout_constraintStart_toEndOf="@+id/idv"
+            app:layout_constraintTop_toBottomOf="@+id/heading" />
+
+        <EditText
+            android:id="@+id/idv_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:layout_marginBottom="8dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintBottom_toTopOf="@+id/yearofmanufacture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idv" />
+
+        <EditText
+            android:id="@+id/dep_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/idv_value"
+            app:layout_constraintTop_toBottomOf="@+id/dep" />
+
+        <TextView
+            android:id="@+id/yearofmanufacture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/year_of_manufacture"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/idv_value"
+            app:layout_constraintBottom_toTopOf="@id/yearofmanufacture_value"/>
+
+        <EditText
+            android:id="@+id/yearofmanufacture_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/yearofmanufacture"
+            app:layout_constraintBottom_toTopOf="@id/zone"/>
+
+        <TextView
+            android:id="@+id/zone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/zone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/yearofmanufacture_value"
+            app:layout_constraintBottom_toTopOf="@id/zone_value"/>
+
+        <Spinner
+            android:id="@+id/zone_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/zone"
+            app:layout_constraintBottom_toTopOf="@id/cubicapacity"/>
+
+        <TextView
+            android:id="@+id/cubicapacity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/cubic_capacity"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/zone_value"
+            app:layout_constraintBottom_toTopOf="@id/cubicapacity_value"/>
+        <EditText
+            android:id="@+id/cubicapacity_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cubicapacity"
+            app:layout_constraintBottom_toTopOf="@id/discount"/>
+        <TextView
+            android:id="@+id/discount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/discount_on_od"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cubicapacity_value"
+            app:layout_constraintBottom_toTopOf="@id/discount_value"/>
+        <EditText
+            android:id="@+id/discount_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/discount"
+            app:layout_constraintBottom_toTopOf="@id/accessories"/>
+        <TextView
+            android:id="@+id/accessories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/accessories_value"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/discount_value"
+            app:layout_constraintBottom_toTopOf="@id/accessories_value"/>
+        <EditText
+            android:id="@+id/accessories_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/accessories"
+            app:layout_constraintBottom_toTopOf="@id/ncb"/>
+        <TextView
+            android:id="@+id/ncb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/no_claim_bonus"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/accessories_value"
+            app:layout_constraintBottom_toTopOf="@id/ncb_value"/>
+
+        <Spinner
+            android:id="@+id/ncb_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ncb"
+            app:layout_constraintBottom_toTopOf="@id/zerodep"/>
+        <TextView
+            android:id="@+id/zerodep"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/zero_depreciation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ncb_value"
+            app:layout_constraintBottom_toTopOf="@id/zerodep_value"/>
+        <EditText
+            android:id="@+id/zerodep_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/zerodep"
+            app:layout_constraintBottom_toTopOf="@id/patoownerdriver"/>
+        <TextView
+            android:id="@+id/patoownerdriver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/pa_to_owner_driver"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/zerodep_value"
+            app:layout_constraintBottom_toTopOf="@id/patoownerdriver_value"/>
+        <EditText
+            android:id="@+id/patoownerdriver_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patoownerdriver"
+            app:layout_constraintBottom_toTopOf="@id/lltopaiddriver"/>
+        <TextView
+            android:id="@+id/lltopaiddriver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/ll_to_paid_driver"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patoownerdriver_value"
+            app:layout_constraintBottom_toTopOf="@id/lltopaiddriver_value"/>
+        <EditText
+            android:id="@+id/lltopaiddriver_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lltopaiddriver"
+            app:layout_constraintBottom_toTopOf="@id/patounnamedpassenger"/>
+        <TextView
+            android:id="@+id/patounnamedpassenger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/pa_to_unnamed_passenger"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lltopaiddriver_value"
+            app:layout_constraintBottom_toTopOf="@id/patounnamedpassenger_value"/>
+        <EditText
+            android:id="@+id/patounnamedpassenger_value"
+            android:layout_width="@dimen/edittext_width"
+            android:layout_height="@dimen/edittext_height"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:ems="10"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patounnamedpassenger"
+            app:layout_constraintBottom_toTopOf="@id/calculate"/>
+
+        <Button
+            android:id="@+id/calculate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/calculate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patounnamedpassenger_value"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="@dimen/vertical_distance"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
