--- a/app/src/main/res/layout/activity_two_wheeler.xml
+++ b/app/src/main/res/layout/activity_two_wheeler.xml
@@ -331,15 +331,49 @@
             android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/patounnamedpassenger"
+            app:layout_constraintBottom_toTopOf="@id/restricttppd"/>
+        <TextView
+            android:id="@+id/restricttppd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:text="@string/restrict_tppd"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/patounnamedpassenger_value"
             app:layout_constraintBottom_toTopOf="@id/calculate"/>
+        <RadioGroup
+            android:id="@+id/restricttppd_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/left_margin"
+            android:layout_marginLeft="@dimen/left_margin"
+            android:layout_marginTop="@dimen/vertical_distance"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/restricttppd"
+            app:layout_constraintBottom_toTopOf="@id/calculate">
+            <RadioButton
+                android:id="@+id/yes"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Yes"></RadioButton>
+            <RadioButton
+                android:id="@+id/no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No"
+                android:checked="true"></RadioButton>
 
+        </RadioGroup>
         <Button
             android:id="@+id/calculate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/calculate"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/patounnamedpassenger_value"
+            app:layout_constraintTop_toBottomOf="@id/restricttppd_value"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="@dimen/vertical_distance"/>
