--- a/app/src/main/res/layout/activity_two_wheeler.xml
+++ b/app/src/main/res/layout/activity_two_wheeler.xml
@@ -98,7 +98,7 @@
             android:layout_marginLeft="@dimen/left_margin"
             android:layout_marginTop="@dimen/vertical_distance"
             android:ems="10"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/yearofmanufacture"
             app:layout_constraintBottom_toTopOf="@id/zone"/>
