--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="vertical_distance">8dp</dimen>
     <dimen name="edittext_height">50dp</dimen>
     <dimen name="edittext_width">160dp</dimen>
+    <dimen name="table_cell_padding">2dp</dimen>
+    <dimen name="table_cell_leftmargin">8dp</dimen>
+    <dimen name="table_cell_rightmargin">8dp</dimen>
 </resources>
