Two Wheeler + Private Car + pdf done + layout finalised + date of registration added + shared preferences done + Share functionality added - Rates of Vehicle to be adjusted - Commission feature to be added.

--- a/app/src/main/res/layout/activity_private_car_breakup.xml
+++ b/app/src/main/res/layout/activity_private_car_breakup.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".two_wheeler_breakup">
+    tools:context=".private_car_breakup">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,7 +14,7 @@
             android:id="@+id/heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/two_wheeler_insurance"
+            android:text="@string/private_car_insurance"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
             app:layout_constraintStart_toStartOf="parent"
