--- a/app/src/main/res/layout/activity_gcv3wheeler.xml
+++ b/app/src/main/res/layout/activity_gcv3wheeler.xml
@@ -137,27 +137,6 @@
 
             <TableRow>
                 <TextView
-                    android:id="@+id/passenger"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
-                    android:text="@string/no_of_passengers" />
-
-
-                <EditText
-                    android:id="@+id/passenger_value"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:inputType="number"/>
-            </TableRow>
-
-            <TableRow>
-                <TextView
                     android:id="@+id/discount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -345,27 +324,6 @@
 
             <TableRow>
                 <TextView
-                    android:id="@+id/patounnamedpassenger"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
-                    android:text="@string/pa_to_unnamed_passenger" />
-
-
-                <EditText
-                    android:id="@+id/patounnamedpassenger_value"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:inputType="numberDecimal"/>
-            </TableRow>
-
-            <TableRow>
-                <TextView
                     android:id="@+id/restricttppd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -385,13 +343,17 @@
                         android:id="@+id/yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yes"></RadioButton>
+                        android:text="Yes">
+
+                    </RadioButton>
                     <RadioButton
                         android:id="@+id/no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="No"
-                        android:checked="true"></RadioButton>
+                        android:checked="true">
+
+                    </RadioButton>
                 </RadioGroup>
             </TableRow>
 
@@ -416,13 +378,17 @@
                         android:id="@+id/yes_imt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yes"></RadioButton>
+                        android:text="Yes">
+
+                    </RadioButton>
                     <RadioButton
                         android:id="@+id/no_imt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="No"
-                        android:checked="true"></RadioButton>
+                        android:checked="true">
+
+                    </RadioButton>
                 </RadioGroup>
             </TableRow>
 
