gcv layout added + intent + breakup + pdf

--- a/app/src/main/res/layout/activity_gcv_breakup.xml
+++ b/app/src/main/res/layout/activity_gcv_breakup.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".gcv3wheeler_breakup">
+    tools:context=".gcv_breakup">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -14,7 +15,7 @@
             android:id="@+id/heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/gcv_3_wheeler_insurance"
+            android:text="@string/goods_carrying_vehicle"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +111,20 @@
                     android:layout_width="0dp"
                     android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="PUBLIC"
+                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    android:gravity="right"/>
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:text="GVW:"
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_leftweight"
+                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                <TextView
+                    android:id="@+id/gvw_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_rightweight"
+                    android:text="0Kgs"
                     android:paddingRight="@dimen/table_cell_rightmargin"
                     android:gravity="right"/>
             </TableRow>
@@ -280,6 +295,22 @@
             </TableRow>
 
             <TableRow>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_leftweight"
+                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    android:text="Geographical Extension:" />
+                <TextView
+                    android:id="@+id/geoext_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_rightweight"
+                    android:text="0.0"
+                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    android:gravity="right"/>
+            </TableRow>
+
+            <TableRow>
                 <TextView
                     android:text="Total A:"
                     android:layout_width="0dp"
@@ -384,6 +415,21 @@
                     android:paddingLeft="@dimen/table_cell_leftmargin"/>
                 <TextView
                     android:id="@+id/llpaid_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_rightweight"
+                    android:text="0.00"
+                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    android:gravity="right"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:text="Non Faring Passenger:"
+                    android:layout_width="0dp"
+                    android:layout_weight="@dimen/table_cell_leftweight"
+                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                <TextView
+                    android:id="@+id/nfpp_value"
                     android:layout_width="0dp"
                     android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
