--- a/app/src/main/res/layout/activity_gcv.xml
+++ b/app/src/main/res/layout/activity_gcv.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gcv3wheeler">
+    tools:context=".gcv">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/gcv_3_wheeler_insurance"
+            android:text="@string/goods_carrying_vehicle"
             android:background="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,6 +112,26 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
                     android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:id="@+id/gvw"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:text="@string/gross_vehicle_weight_kgs" />
+
+                <EditText
+                    android:id="@+id/gvw_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:autofillHints=""
+                    android:ems="10"
+                    android:inputType="numberDecimal"/>
             </TableRow>
 
             <TableRow>
@@ -221,6 +241,26 @@
 
             <TableRow>
                 <TextView
+                    android:id="@+id/geoext"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:text="@string/geographical_extension" />
+
+
+                <CheckBox
+                    android:id="@+id/geoext_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Yes"
+                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:ems="10"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
                     android:id="@+id/cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -292,6 +332,26 @@
 
                 <EditText
                     android:id="@+id/lltopaiddriver_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:autofillHints=""
+                    android:ems="10"
+                    android:inputType="numberDecimal"/>
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:id="@+id/nfpp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
+                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    android:text="@string/non_faring_passenger_nfpp" />
+
+                <EditText
+                    android:id="@+id/nfpp_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
