--- a/app/src/main/res/layout/activity_gcv_breakup.xml
+++ b/app/src/main/res/layout/activity_gcv_breakup.xml
@@ -12,25 +12,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/heading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/goods_carrying_vehicle"
-            android:background="@color/colorPrimary"
-            android:gravity="center_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/basic_details_heading"/>
-        <TextView
             android:id="@+id/basic_details_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Basic Details"
             android:gravity="center_horizontal"
+            android:background="@color/headingcolor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/heading"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/basic_details_table"/>
         <TableLayout
             android:id="@+id/basic_details_table"
@@ -135,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(A) OD Premium Package"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -330,7 +320,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(B) Liability Premium"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -457,7 +447,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(C) Total Premium"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
