--- a/app/src/main/res/layout/activity_misc_breakup.xml
+++ b/app/src/main/res/layout/activity_misc_breakup.xml
@@ -11,25 +11,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/heading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/miscellaneous_vehicle"
-            android:background="@color/colorPrimary"
-            android:gravity="center_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/basic_details_heading"/>
-        <TextView
             android:id="@+id/basic_details_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Basic Details"
             android:gravity="center_horizontal"
+            android:background="@color/headingcolor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/heading"
+            app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/basic_details_table"/>
         <TableLayout
             android:id="@+id/basic_details_table"
@@ -136,7 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(A) OD Premium Package"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -346,7 +336,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(B) Liability Premium"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -458,7 +448,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(C) Total Premium"
-            android:background="@color/colorPrimary"
+            android:background="@color/headingcolor"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
